Fix readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 400;
   margin: 0 auto;
   width: 100%;
@@ -16,30 +16,26 @@ body {
 }
 
 p {
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 200;
-  text-shadow: 1px 1px black;
 }
 
 .emphasis {
   font-size: 16px;
   font-weight: 300;
   color: #ff5c5c;
-  text-shadow: 1px 1px black;
 }
 
 .emphasis-bold {
   font-size: 16px;
   font-weight: 400;
   color: #ff5c5c;
-  text-shadow: 1px 1px black;
 }
 
 .contact-me {
   font-size: 16px;
   font-weight: 300;
   color: #ff5c5c;
-  text-shadow: 1px 1px black;
   margin-bottom: 50px;
 }
 
@@ -48,14 +44,12 @@ h3 {
   margin-bottom: 10px;
   font-size: 18px;
   font-weight: 300;
-  text-shadow: 1px 1px black;
 }
 
 h4 {
   font-style: italic;
   font-size: 16px;
   font-weight: 300;
-  text-shadow: 1px 1px black;
 }
 
 #navbar {
@@ -69,14 +63,14 @@ h4 {
 
 #navbar-content {
   margin: 0 auto;
-  width: 960px;
+  width: 60%;
 }
 
 #first-name {
   margin-top: 20px;
   display: inline-block;
-  font-size: 36px;
-  font-family: 'Teko', sans-serif;
+  font-size: 2em;
+  font-family: 'Source Sans Pro', sans-serif;
   border-bottom: 1px solid black;
 }
 
@@ -136,11 +130,34 @@ a:hover {
   justify-content: space-around;
 }
 
+#about,
+#skills,
+#projects {
+  width: 70%;
+  margin-top: 2%;
+  margin-bottom: 5%;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+#about,
+#projects,
+#skills,
+#contact {
+  display: hidden;
+}
+
+#about .content {
+  width: 75%;
+}
+
+.content {
+  width: 45%;
+  text-align: center;
+}
+
 .about-me {
-  width: 80%;
   margin: 0 auto;
-  margin-top: 10%;
-  margin-bottom: 2%;
+  margin-top: 3%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -158,18 +175,6 @@ a:hover {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-}
-
-#projects {
-  width: 80%;
-  margin-top: 5%;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-#skills {
-  width: 50%;
-  margin-top: 5%;
-  background: rgba(0, 0, 0, 0.5);
 }
 
 #skills h3 {
@@ -209,18 +214,6 @@ a:hover {
 
 .logo-space a:hover {
   color: #ff5c5c;
-}
-
-#about,
-#projects,
-#skills,
-#contact {
-  display: hidden;
-}
-
-.content {
-  width: 45%;
-  text-align: center;
 }
 
 #contact {
